# VelRecover

./: .bumpversion.cfg  .gitignore  README.md  pyproject.toml
.github/workflows/: python-publish.yml
.tmp.driveupload/: 133388  133402  133406  133410  133414  133418  133422  133426  133430  133434  133438  133442  133450  133466  133474  133478  133482  133494  133514  133516  133520  133524  133526  133530  133534  133538  133542  133558  133566  133580  133588  133604  133614  133632  133642  133646  133652  133660  133672  133680  (+3592 more)
src/velrecover/: __init__.py  __main__.py
src/velrecover/config/: __init__.py  app_config.py
src/velrecover/core/: __init__.py  base.py  gauss_blur.py  interpolation.py  linear_models.py  logarithmic_models.py  rbf_models.py  two_step.py  visualization.py
src/velrecover/examples/SEGY/: README.txt  RIV6.segy
src/velrecover/examples/VELS/2D/: README.txt
src/velrecover/examples/VELS/RAW/: sample_velocity_data.txt
src/velrecover/ui/: _0_welcome_tab.py  _1_load_data_tab.py  _2_edit_tab.py  _3_interpolate_tab.py  __init__.py  custom_picks.py  dialogs.py  distribution_display.py  help_dialogs.py  main_window.py  navigation_panel.py  segy_display.py  tab_container.py  theme.qss  widgets.py
src/velrecover/utils/: VelocityData.py  __init__.py  console_utils.py  interpolation_utils.py  io_utils.py  resource_utils.py  save_functions.py  ui_utils.py  velocity_distribution.py  velocity_export.py  visualization_utils.py
tests/: cleanup.py  debug_velrecover.py  run_src_velrecover.py
